[package]
name = "endomondo-uploader"
version = "0.1.0"
authors = ["Jose Antonio Delgado Alfonso <jdelgadoalfonso@gmail.com>"]

[dependencies]
config = "0.6"
error-chain = "0.11.0"
futures = "0.1.17"
hyper = "0.11.7"
kuchiki = "0.6.0"
lazy_static = "1.0.0"
pbr = "1.0.0"
regex = "0.2.3"
reqwest =  { git = "https://github.com/seanmonstar/reqwest.git", features = ["unstable"] }
serde_json = "1.0.6"
tokio-core = "0.1.10"
